--- a/views/index.pug
+++ b/views/index.pug
@@ -1,13 +1,4 @@
-doctype html
-html
-  head
-    title= 'Tianqi\'s blog'
-    style
-      include ../node_modules/bootstrap/dist/css/bootstrap.min.css
-      include ../node_modules/prismjs/themes/prism-tomorrow.css
-      include index.css
-  body
-    .App
-      include Header/index
-      .App-layout
-        include Posts/index
+extends Layout/index
+
+block content
+  include Posts/index
