--- a/views/Layout/index.pug
+++ b/views/Layout/index.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= 'Tianqi\'s blog'
+    meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
     style
       include ../../node_modules/bootstrap/dist/css/bootstrap.min.css
       include ../../node_modules/prismjs/themes/prism-tomorrow.css
