--- a/views/Layout/index.pug
+++ b/views/Layout/index.pug
@@ -8,6 +8,10 @@ html
       include ../../node_modules/bootstrap/dist/css/bootstrap.min.css
       include ../../node_modules/prismjs/themes/prism-tomorrow.css
       include index.css
+    script
+      include ../../node_modules/showdown/dist/showdown.js
+      include ../../node_modules/prismjs/prism.js
+
   body
     .App
       include ../Header/index
