--- a/views/Layout/index.css
+++ b/views/Layout/index.css
@@ -11,6 +11,7 @@ p {
 ul,
 ol {
   list-style-position: inside;
+  padding-inline-start: 0;
 }
 
 li {
@@ -77,7 +78,8 @@ Start from App specific rules
 @media screen and (max-width: 768px) {
   .App-layout {
     top: 60px;
-    padding-left: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
     border-right: none;
     margin-right: 0;
     font-size: 0.95em;
