--- a/views/Layout/index.pug
+++ b/views/Layout/index.pug
@@ -10,6 +10,7 @@ html
       include index.css
     script
       include ../../node_modules/showdown/dist/showdown.js
+      include ../../node_modules/cross-fetch/dist/browser-polyfill.js
       include ../../node_modules/prismjs/prism.js
 
   body
