--- a/views/404/index.pug
+++ b/views/404/index.pug
@@ -1,9 +1,8 @@
 extends ../Layout/index
 
 block content
-  .App-not-found
+  .App-not-found(style={"text-align": "right"})
     h1(style={"font-size": "4em"}) 404
-    h2 Not Found
     h3 山重水复疑无路 
     h3 
       a(href="/" style={"color": "teal"}) 柳暗花明又一村
