--- a/views/Post/index.css
+++ b/views/Post/index.css
@@ -29,6 +29,12 @@
 
 @media screen and (max-width: 768px) {
   .App-markdown {
-    font-size: 1.15em;
+    font-size: 1.2em;
+  }
+  .App-post hgroup {
+    margin-bottom: 2.5em;
+  }
+  .App-markdown pre {
+    font-size: 0.75em;
   }
 }
