--- a/views/Layout/index.pug
+++ b/views/Layout/index.pug
@@ -3,7 +3,13 @@ html
   head
     title= 'Tianqi\'s blog'
     meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
+    meta(name="description" content="Vincent's blog")
+    meta(name="author" content="Wentianqi")
+    meta(name="author" content="Vincent")
+    meta(name="keywords" content="Vincent, Blog, Programming, Javascript, 编程, 博客")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+    link(rel="shortcut icon" href="../../favicon.ico" type="image/x-icon")
+
     style
       include ../../node_modules/bootstrap/dist/css/bootstrap.min.css
       include ../../node_modules/prismjs/themes/prism-tomorrow.css
