--- a/views/Layout/index.css
+++ b/views/Layout/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
@@ -11,6 +11,7 @@ p {
 ul,
 ol {
   list-style-position: inside;
+  text-indent: 0;
   padding-inline-start: 0;
 }
 
