--- a/views/Layout/index.css
+++ b/views/Layout/index.css
@@ -1,11 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, "STHeiti", "SimHei", sans-serif;
 }
 
 p {
   line-height: 1.5;
+  margin-bottom: 2em;
 }
 
 ul,
