--- a/views/Layout/index.css
+++ b/views/Layout/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, "STHeiti", "SimHei", sans-serif;
+  font-family: Helvetica, Arial, "STHeiti", "Microsoft YaHei", sans-serif;
 }
 
 p {
@@ -50,6 +50,7 @@ Start from App specific rules
   min-height: 100vh;
   position: relative;
   border-right: 1px solid #eee;
+  background-color: rgb(252, 251, 249);
 }
 
 .App-text-1 {
