--- a/views/Header/index.pug
+++ b/views/Header/index.pug
@@ -5,6 +5,7 @@ style
     .App-header-logo-en Tianqi's blog
     .App-header-logo-cn 天启的博客
 
+  .App-header-links
     each item in navigation
       a.App-header-link(href=item.link)=item.title 
   
