--- a/views/Welcome/index.pug
+++ b/views/Welcome/index.pug
@@ -8,5 +8,5 @@ block content
     - function random(min, max) { return Math.floor(Math.random() * (max - min + 1)) + min }
     - const i = random(0, wordsOfToday.length - 1)
     h4= wordsOfToday[i]
-    a.App-welcome-action(href="posts") 开始阅读
+    a.App-welcome-action(href="posts") 欢迎造访 
   
