--- a/views/Welcome/index.css
+++ b/views/Welcome/index.css
@@ -1,5 +1,6 @@
 .App-welcome {
   text-align: center;
+  padding: 0 15px;
   opacity: 0.7;
   margin: -21px -30px -45px -30px;
   min-height: 100vh;
@@ -21,6 +22,9 @@
 
 @media screen and (max-width: 768px) {
   .App-welcome {
-    margin: -21px -15px -45px -15px;
+    margin: -69px -15px -30px -15px;
+  }
+  .App-welcome h4 {
+    font-size: 1.2em;
   }
 }
