--- a/views/Header/index.css
+++ b/views/Header/index.css
@@ -1,6 +1,6 @@
 .App-header {
-  color: #fff;
-  background-color: #333;
+  background-image: url(/images/concrete.jpg);
+  background-size: cover;
   padding: 15px;
   width: 300px;
   position: fixed;
@@ -8,35 +8,35 @@
   top: 0;
   height: 100%;
   z-index: 9;
+  box-shadow: -3px 0 7px 0px #444;
 }
 
 .App-header-links {
   max-height: 80vh;
   overflow-y: auto;
+  font-size: 14px;
 }
 
 .App-header-link {
   display: block;
-  color: #fff;
-  padding: 0.9em 0.6em;
-  line-height: 1.3;
+  padding: 0.8em 0.6em;
+  line-height: 1;
   border-bottom: 1px solid transparent;
 }
 
 .App-header-link:hover {
-  border-bottom: 1px solid #fff;
-  opacity: 0.7;
+  border-bottom: 1px solid #aaa;
+  color: #777;
 }
 
 .App-header-logo {
   text-align: center;
   display: block;
-  color: white;
-  font-size: 1.5em;
+  font-size: 1.2em;
   font-weight: 300;
   margin-bottom: 1em;
   padding-bottom: 10px;
-  border-bottom: 3px solid #fff;
+  border-bottom: 1px solid #aaa;
 }
 
 .App-header-logo-cn {
