--- a/views/Layout/index.css
+++ b/views/Layout/index.css
@@ -59,7 +59,7 @@ Start from App specific rules
 }
 .App-text-2 {
   font-size: 1.15em;
-  margin: 0.3em 0;
+  margin: 0.24em 0;
   color: #222;
 }
 .App-text-5 {
@@ -75,6 +75,7 @@ Start from App specific rules
   color: #444;
   font-weight: bold;
   font-size: 10px;
+  margin-left: 6px;
 }
 
 @media screen and (max-width: 768px) {
