--- a/views/Posts/index.css
+++ b/views/Posts/index.css
@@ -23,7 +23,7 @@
 }
 
 #App-posts-search-input:focus {
-  box-shadow: 0 1px 5px 0 #ccc;
+  box-shadow: 0 1px 4px 0px #ccc;
 }
 
 #App-posts-search-go {
