--- a/views/Layout/index.pug
+++ b/views/Layout/index.pug
@@ -17,6 +17,7 @@ html
       include ../../node_modules/showdown/dist/showdown.js
       include ../../node_modules/cross-fetch/dist/browser-polyfill.js
       include ../../node_modules/prismjs/prism.js
+      include ../../google-analytics.js
 
   body
     .App
