--- a/views/About/index.pug
+++ b/views/About/index.pug
@@ -5,5 +5,4 @@ block content
     include index.css
 
   .App-about
-    h1 About / 关于我
-    p Full stack Web developer at Fast Retailing
+    .App-markdown ## About Me
