--- a/views/Layout/index.css
+++ b/views/Layout/index.css
@@ -28,6 +28,12 @@ a {
   color: initial;
 }
 
+textarea,
+input {
+  width: 100%;
+  padding: 3px 9px;
+}
+
 a:hover {
   color: inherit;
   text-decoration: none;
@@ -58,7 +64,7 @@ Start from App specific rules
 }
 
 .App-text-1 {
-  font-size: 2em;
+  font-size: 2.1em;
   margin: 0.6em 0 0.9em;
 }
 .App-text-2 {
