--- a/views/Layout/index.pug
+++ b/views/Layout/index.pug
@@ -7,7 +7,7 @@ html
     meta(name="author" content="Vincent")
     meta(name="keywords" content="Vincent, Blog, Programming, Javascript, 编程, 博客")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    link(rel="shortcut icon" href="../../favicon.ico" type="image/x-icon")
+    link(rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon")
 
     style
       include ../../node_modules/bootstrap/dist/css/bootstrap.min.css
