--- a/views/Header/index.css
+++ b/views/Header/index.css
@@ -27,6 +27,10 @@
   margin-top: 1em;
 }
 
+.App-header-link:first-child {
+  border-top: none;
+}
+
 .App-header-link.active,
 .App-header-link:hover {
   background-color: teal;
