--- a/views/Header/index.css
+++ b/views/Header/index.css
@@ -17,7 +17,8 @@
 
 .App-header-link {
   display: block;
-  padding: 0.6em 0.6em;
+  padding: 0.4em 0.6em;
+  margin: 0.3em 0;
   line-height: 1.2;
   border-bottom: 1px solid transparent;
 }
