--- a/views/Post/index.css
+++ b/views/Post/index.css
@@ -16,7 +16,7 @@
 .App-markdown {
 }
 
-.App-markdown p {
+.App-markdown > p {
   line-height: 1.75;
   color: #333;
 }
@@ -50,7 +50,7 @@
 }
 
 .App-markdown blockquote {
-  border-left: 5px solid #aaa;
+  border-left: 5px solid #ccc;
   margin-left: 0;
   padding-left: 1em;
   color: #999;
